# python

./: LICENSE  format-and-lint.sh  test.sh
.github/workflows/: ci.yml
directory_populator/: pyproject.toml
directory_populator/src/directory_populator/: __init__.py  test.py
log/: __init__.py  pyproject.toml  test.py
log/src/log/: __init__.py  test.py
presume/: __init__.py  pyproject.toml  rcarch.py  rcarch_test.py  test.py  zstd_stream.go  zstd_stream_test.go
presume/src/presume/: __init__.py  test.py
psched/: pyproject.toml
psched/src/psched/: __init__.py  test.py
rcarch/: README.md  pyproject.toml
rcarch/src/: zstd_stream
rcarch/src/rcarch/: README.md  __init__.py  go.mod  go.sum  rcarch.py  rcarch_test.py  test.py  zstd_stream.go
www/: pyproject.toml
www/src/www/: __init__.py  test.py
