[project]
name = "directory_populator"
description = "module managing directories that are periodically created and populated"
version = "0.9.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
# 701: multiple statements on one line, e.g. except: something()
lint.extend-ignore = ["E701"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["directory_populator"]
