[project]
name = "log"
version = "0.9.0"
description = "logging library"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }

[tool.setuptools]
packages = ["log"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
# 701: multiple statements on one line, e.g. except: something()
lint.extend-ignore = ["E701"]
