[project]
name = "presume"
version = "0.9.0"
dependencies = [
  "zstandard",
]

py-modules = ["rcarch"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
# 701: multiple statements on one line, e.g. except: something()
lint.extend-ignore = ["E701"]
