[project]
name = "presume"
version = "0.9.0"
dependencies = [
  "zstandard",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
# 701: multiple statements on one line, e.g. except: something()
lint.extend-ignore = ["E701"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["presume"]
